# tuleap-documentation-en

./: .gitignore  .gitpod.Dockerfile  .gitpod.yml  .travis.yml  Dockerfile-doc.tuleap.org  Dockerfile-docs.tuleap.org  Dockerfile-linkcheck  Jenkinsfile-build-doc.tuleap.org  Jenkinsfile-build-docs.tuleap.org  Jenkinsfile-build-online-docs  Jenkinsfile-linkcheck  LICENSE  Makefile  README.md  default.nix  linkcheck-docker.nix  package-lock.json  package.json  pinned-nixpkgs.nix  pyproject.toml  requirements-dev.txt  requirements.txt  shell.nix  vite.config.ts  webpack.common.js  webpack.dev.js  webpack.prod.js
.devcontainer/: devcontainer.json
.github/: dependabot.yml  renovate.json
.github/workflows/: CI.yml
build-support/: build-tools.nix  dev-tools.nix  linkcheck-docker.dockerfile  pinned-nixpkgs.nix  pinned-treefmt-nix.nix
docs.tuleap.org/: Dockerfile  nginx.conf
languages/en/: admin.rst  conf.py  deploy.rst  dev.rst  how-to.rst  index.md  index.rst  install  install.rst  integration.rst  user.rst
languages/en/_pygments/: lexer.py  tuleap_style.py
languages/en/administration-guide/: admin-tasks.rst  advanced-deployments.rst  application-management.rst  authentication.rst  backend-worker.rst  backup.rst  bot-mattermost-plugins.rst  customisations.rst  daemons.rst  distributed-tuleap.rst  files-permissions.rst  files-structure.rst  howto.rst  import-format.rst  issues.rst  logs.rst  permission-delegation.rst  project-export-import.rst  (+8 more)
languages/fr/: conf.py  index.rst
nbproject/: project.xml
online-docs/: Dockerfile
tmp/en/: conf.py  index.rst
(+477 files in other folders)
