[project]
name = "tuleap-documentation-en"
version = "0.0.0"
description = ""
authors = [{ name = "Enalean team" }]
requires-python = ">=3.12"
dependencies = [
    "Sphinx>=7.1.2,<8",
    "sphinx-rtd-theme>=3.0.2,<4",
    "sphinxext-rediraffe>=0.2.7,<0.3",
    "sphinx-notfound-page>=1.1.0,<2",
    "sphinxcontrib-jquery>=4.1,<5",
]

[dependency-groups]
dev = ["sphinx-autobuild>=2024.10.3,<2025"]

[tool.setuptools]
py-modules = []
