[project]
name = "tuleap-documentation-en"
version = "0.0.0"
description = ""
authors = [{ name = "Enalean team" }]
requires-python = ">=3.13"
dependencies = [
    "Sphinx>=9.1,<10",
    "sphinx-rtd-theme>=3.0.2,<4",
    "sphinxext-rediraffe>=0.3,<0.4",
    "sphinx-notfound-page>=1.1.0,<2",
    "sphinxcontrib-jquery>=4.1,<5",
]

[dependency-groups]
dev = ["sphinx-autobuild>=2025.8.25,<2026"]

[tool.setuptools]
py-modules = []
